linkedin and github page links are added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>Eren Ufuktepe</title>
 </head>
@@ -12,6 +13,10 @@
     <nav class="navbar">
         <div class="logo">
             <img src="assets/img/profile.png" alt="Logo">
+            <ul class="web-links">
+                <li><a class="fa fa-linkedin-square" href="https://www.linkedin.com/in/eren-ufuktepe-a20081145/" target="_blank"></a></li>
+                <li><a class="fa fa-github-square" href="https://github.com/ErenUfuktepe" target="_blank"></a></li>
+            </ul>
         </div>
         <ul class="nav-links">
             <li><a href="#">About</a></li>
@@ -21,15 +26,13 @@
             <li><a href="#">Online Courses and Certificates</a></li>
             <li><a href="#">Honors and Awards</a></li>
             <li><a href="#">Community Involvement</a></li>
-
         </ul>
     </nav>
     
     <div class="content">
-        <h1>Welcome to My Website</h1>
+        <h1>Eren Ufuktepe</h1>
         <hr>
-
-        <p>Something</p>
+        <p>Work in progress...</p>
     </div>
 
     <script src="assets/js/script.js"></script>
