Education and work experience added.

--- a/index.html
+++ b/index.html
@@ -18,22 +18,180 @@
                 <li><a class="fa fa-github-square" href="https://github.com/ErenUfuktepe" target="_blank"></a></li>
             </ul>
         </div>
-        <ul class="nav-links">
-            <li><a href="#">About</a></li>
-            <li><a href="#">Education</a></li>
-            <li><a href="#">Work Experience</a></li>
-            <li><a href="#">Technical Strengths</a></li>
-            <li><a href="#">Online Courses and Certificates</a></li>
-            <li><a href="#">Honors and Awards</a></li>
-            <li><a href="#">Community Involvement</a></li>
-        </ul>
+        <div class="nav-content">
+            <div class="nav-item">
+                <h2>SUMMARY</h2>
+                <p>Results-driven Software Engineer with expertise in scalable application development and system opti-
+                    mization within healthcare and finance sectors. Adept at transforming legacy systems, developing ETL
+                    pipelines, and deploying cloud solutions on AWS and Azure. Proficient in Java, Python, and Spring
+                    Boot, committed to delivering efficient and impactful technological solutions.</p>
+            </div>
+            <div class="nav-item">
+                <h2>SKILLS</h2>
+                <ul>
+                    <li>Computer Languages</li>
+                    <p>Java, Python, C#, C/C++, JavaScript, PHP, R, COBOL</p>
+                    <li>Database</li>
+                    <p>MySQL, PostgreSQL, MS SQL Server, Oracle, Snowflake</p>
+                    <li>Frameworks & Tools</li>
+                    <p>Spring Boot, Hibernate, ASP.NET MVC, Entity Framework, JUnit, Docker, Vue.js, React Native, .NET</p>
+                    <li>Cloud & DevOps</li>
+                    <p>AWS, Azure, Databricks, Google Cloud Platform, Jenkins, Gitlab</p>
+                </ul>
+            </div>
+        </div>
     </nav>
     
     <div class="content">
-        <h1>Eren Ufuktepe</h1>
-        <hr>
-        <p>Work in progress...</p>
+        <h1>EREN UFUKTEPE</h1>
+        <div class="content-item">
+            <h2>EDUCATION</h2>
+            <div class="school">
+                <p>August 2020 - May 2022</p>
+                <h3>University of Missouri-Columbia</h3>
+                <p>M.Sc in Data Science and Analytics</p>
+                <ul>
+                    <li><b>Emphasis:</b> High-Performance Computing.</li>
+                    <li><b>Capstone:</b> Predict the risk of hypertension using simple lifestyle factors.</li>
+                </ul>
+            </div>
+            <div class="school">
+                <p>October 2016 - January 2020</p>
+                <h3>Izmir Institute of Technology</h3>
+                <p>B.Sc. in Computer Engineering</p>
+                <ul>
+                    <li><b>Thesis:</b> Developing an eye-tracking system for ALS patients. Used C++ programming language using openFrameworks.</li>
+                </ul>
+            </div>
+            <div class="school">
+                <p>September 2014 - June 2016</p>
+                <h3>Izmir University of Economics</h3>
+                <p>B.Sc. in Software Engineering &bull; September 2014 - June 2016</p>
+                <ul>
+                    <li>Transferred to Izmir Institute of Technology.</li>
+                </ul>
+            </div>
+        </div>
+
+        
+        <div class="content-item">
+            <h2>WORK EXPERIENCE</h2>
+            <div class="work-experience">
+                <p>December 2024 - Present</p>
+                <h3>Oracle</h3>
+                <h4>Software Engineer II</h4>
+                <p>Columbia, MO, United States</p>
+                <p>Oracle Corporation is an American multinational computer technology company.</p>
+                <ul>
+                    <li>Worked in the Custom Applications team at the Tiger Institute for Health Innovation within MU Health Care.</li>
+                    <li>Built a single SPA application for the security team to check user activities.</li>
+                    <li>Worked with the research team to build a data warehouse in Snowflake.</li>
+                    <li>Built data pipelines with medallion architecture in Databricks for the analytics team.</li>
+                    <li>Refactored the ETL pipelines to enhance performance and reduce the occurrence of failures in the process.</li>
+                    <li>Leveraged Azure Data Factory, Azure Functions, Azure DevOps, Databricks, React Native, C#, Python, and SQL to build and deploy services.</li>
+                </ul>
+            </div>
+
+            <div class="work-experience">
+                <p>October 2024 - December 2024</p>
+                <h3>Columbia Insurance Group</h3>
+                <h4>Full Stack Developer</h4>
+                <p>Columbia, MO, United States</p>
+                <p>Columbia Mutual Insurance Company is the parent company of a group of five property and casualty insurance companies operating as the Columbia Insurance Group.</p>
+                <ul>
+                    <li>Made improvements and fixed bugs in the legacy Java applications.</li>
+                    <li>Built new features in the React application.</li>
+                    <li>Leveraged Java, React Native, jQuery, and AWS to build and deploy services.</li>
+                </ul>
+            </div>
+
+            <div class="work-experience">
+                <p>February 2022 - September 2023</p>
+                <h3>ZoomCare</h3>
+                <h4>Software Engineer</h4>
+                <p>Portland, OR, United States</p>
+                <p>ZoomCare is a Portland, Oregon-based chain of healthcare clinics.</p>
+                <ul>
+                    <li>Worked in the Clinical Delivery team.</li>
+                    <li>Collaborated with cross-functional teams to transition a legacy system from a monolithic architec-ture to a microservices-based architecture using Java and Spring Boot.</li>
+                    <li>Performed unit testing using JUnit and Mockito, following test-driven development.</li>
+                    <li>Conducted code reviews, pair programming, and tech refinements.</li>
+                    <li>Utilized Java, React Native, Postgresql, Spring Boot, Maven, Jenkins, Datadog, Hibernate, and AWS to build and deploy services.</li>
+                </ul>
+            </div>
+
+            <div class="work-experience">
+                <p>August 2020 - February 2022</p>
+                <h3>Cerner Corporation</h3>
+                <h4>Software Engineer</h4>
+                <p>Columbia, MO, United States</p>
+                <p>Cerner Corporation is an American supplier of health information technology services, devices, and hardware.</p>
+                <ul>
+                    <li>Worked in the Information Management team at the Tiger Institute for Health Innovation within MU Health Care.</li>
+                    <li>Provided data and built ETL automation for researchers in the University of Missouri hospital.</li>
+                    <li>Built new features for a C# based web application.</li>
+                    <li>Worked with the research team to build a data warehouse in Snowflake using the PCORnet Common Data model for MU Health Care.</li>
+                    <li>Used Azure Data Factory, Azure Databricks, AWS, Snowflake, Oracle, and MS SQL.</li>
+                </ul>
+            </div>
+
+            <div class="work-experience">
+                <p>July 2020 - August 2020</p>
+                <h3>Dynamic Medical Management Solutions</h3>
+                <h4>Software Development Intern</h4>
+                <p>Columbia, MO, United States</p>
+                <p>Dynamic Medical Management Solutions specializes in medical billing and operations, focusing on data analysis to optimize workflow.</p>
+                <ul>
+                    <li>Participated in a project to automate the reporting system.</li>
+                    <li>Built APIs and Unit testing in PHP programming language.</li>
+                    <li>Worked with Docker containers, Postgresql database, and bash scripting.</li>
+                </ul>
+            </div>
+
+            <div class="work-experience">
+                <p>July 2019 - February 2020</p>
+                <h3>Softtech</h3>
+                <h4>Software Engineer</h4>
+                <p>Istanbul, Turkey</p>
+                <p>Softtech is a software company in the banking and finance industry. It is Turkey’s largest software company with domestic capital.</p>
+                <ul>
+                    <li>Worked in the International Banking department.</li>
+                    <li>Participated in an Open Banking project.</li>
+                    <li>Made improvements in the COBOL system.</li>
+                    <li>Built Restful web services using Java and Spring Boot.</li>
+                    <li>Utilized Java, COBOL, Vue.js, MySQL, MS SQL, Spring Boot, Gradle, Jenkins, Hibernate, and Gitlab to build and deploy services.</li>
+                </ul>
+            </div>
+
+            <div class="work-experience">
+                <p>July 2018 - August 2018</p>
+                <h3>Vestel</h3>
+                <h4>Intern</h4>
+                <p>Manisa, Turkey</p>
+                <p>Vestel is a Turkish home and professional appliances manufacturing company of 18 companies specializing in electronics, major appliances, and information technology.</p>
+                <ul>
+                    <li>Worked in Smart Systems Test Development department.</li>
+                    <li>Created a web application displaying real-time phone production line test results.</li>
+                    <li>Used C# programming, Entity Framework, ASP .NET MVC, and MS SQL database.</li>
+                </ul>
+            </div>
+
+            <div class="work-experience">
+                <p>October 2017 - February 2018</p>
+                <h3>ESB Software and Information Technologies</h3>
+                <h4>Volunteer</h4>
+                <p>Izmir, Turkey</p>
+                <p>ESB Software and Information Technologies, a software company that offers web and mobile-based software solutions</p>
+                <ul>
+                    <li>Participated in a project called Kosi Web. This application allows people to create their website without writing any code.</li>
+                    <li>Used PHP, HTML, CSS, and JavaScript programming languages and MySQL database.</li>
+                </ul>
+            </div>
+
+        </div>
     </div>
+
+
 
     <script src="assets/js/script.js"></script>
 </body>
