some styling change

--- a/index.html
+++ b/index.html
@@ -17,27 +17,36 @@
                 <li><a class="fa fa-linkedin-square" href="https://www.linkedin.com/in/eren-ufuktepe-a20081145/" target="_blank"></a></li>
                 <li><a class="fa fa-github-square" href="https://github.com/ErenUfuktepe" target="_blank"></a></li>
             </ul>
+            <div class="contact">
+                <ul>
+                    <li><span class="fa fa-map-marker"></span> Columbia, MO</li>
+                </ul>
+            </div>
         </div>
         <div class="nav-content">
             <div class="nav-item">
-                <h2>SUMMARY</h2>
-                <p>Results-driven Software Engineer with expertise in scalable application development and system opti-
-                    mization within healthcare and finance sectors. Adept at transforming legacy systems, developing ETL
-                    pipelines, and deploying cloud solutions on AWS and Azure. Proficient in Java, Python, and Spring
-                    Boot, committed to delivering efficient and impactful technological solutions.</p>
+                <div class="summary">
+                    <h2>SUMMARY</h2>
+                    <p>Results-driven Software Engineer with expertise in scalable application development and system opti-
+                        mization within healthcare and finance sectors. Adept at transforming legacy systems, developing ETL
+                        pipelines, and deploying cloud solutions on AWS and Azure. Proficient in Java, Python, and Spring
+                        Boot, committed to delivering efficient and impactful technological solutions.</p>
+                </div>
             </div>
             <div class="nav-item">
-                <h2>SKILLS</h2>
-                <ul>
-                    <li>Computer Languages</li>
-                    <p>Java, Python, C#, C/C++, JavaScript, PHP, R, COBOL</p>
-                    <li>Database</li>
-                    <p>MySQL, PostgreSQL, MS SQL Server, Oracle, Snowflake</p>
-                    <li>Frameworks & Tools</li>
-                    <p>Spring Boot, Hibernate, ASP.NET MVC, Entity Framework, JUnit, Docker, Vue.js, React Native, .NET</p>
-                    <li>Cloud & DevOps</li>
-                    <p>AWS, Azure, Databricks, Google Cloud Platform, Jenkins, Gitlab</p>
-                </ul>
+                <div class="skills">
+                    <h2>SKILLS</h2>
+                    <ul>
+                        <li>Computer Languages</li>
+                        <p>Java, Python, C#, C/C++, JavaScript, PHP, R, COBOL</p>
+                        <li>Database</li>
+                        <p>MySQL, PostgreSQL, MS SQL Server, Oracle, Snowflake</p>
+                        <li>Frameworks & Tools</li>
+                        <p>Spring Boot, Hibernate, ASP.NET MVC, Entity Framework, JUnit, Docker, Vue.js, React Native, .NET</p>
+                        <li>Cloud & DevOps</li>
+                        <p>AWS, Azure, Databricks, Google Cloud Platform, Jenkins, Gitlab</p>
+                    </ul>
+                </div>
             </div>
         </div>
     </nav>
@@ -190,8 +199,6 @@
 
         </div>
     </div>
-
-
 
     <script src="assets/js/script.js"></script>
 </body>
