--- a/index.html
+++ b/index.html
@@ -27,10 +27,13 @@
             <div class="nav-item">
                 <div class="summary">
                     <h2>SUMMARY</h2>
-                    <p>Results-driven Software Engineer with expertise in scalable application development and system opti-
-                        mization within healthcare and finance sectors. Adept at transforming legacy systems, developing ETL
-                        pipelines, and deploying cloud solutions on AWS and Azure. Proficient in Java, Python, and Spring
-                        Boot, committed to delivering efficient and impactful technological solutions.</p>
+                    <p>Software & Data Engineer with 5+ years of experience building scalable cloud-native applications and
+                    data pipelines across healthcare and finance domains. Profcient in Java, Python, Spring Boot, and
+                    PySpark, with hands-on experience using Databricks, Azure Data Factory, and AWS (S3, Lambda).
+                    Known for quickly adapting to new technologies and collaborating across functions to modernize legacy
+                    systems, optimize ETL work
+                    ows, and deliver distributed services that improve data accessibility and
+                    operational performance.</p>
                 </div>
             </div>
             <div class="nav-item">
@@ -38,13 +41,13 @@
                     <h2>SKILLS</h2>
                     <ul>
                         <li>Computer Languages</li>
-                        <p>Java, Python, C#, C/C++, JavaScript, PHP, R, COBOL</p>
-                        <li>Database</li>
-                        <p>MySQL, PostgreSQL, MS SQL Server, Oracle, Snowflake</p>
-                        <li>Frameworks & Tools</li>
-                        <p>Spring Boot, Hibernate, ASP.NET MVC, Entity Framework, JUnit, Docker, Vue.js, React Native, .NET</p>
-                        <li>Cloud & DevOps</li>
-                        <p>AWS, Azure, Databricks, Google Cloud Platform, Jenkins, Gitlab</p>
+                        <p>Java, Python, C#, JavaScript, SQL</p>
+                        <li>Frameworks & Libraries</li>
+                        <p>Spring Boot, Hibernate, React Native, Maven</p>
+                        <li>Data & Cloud Platforms</li>
+                        <p>Apache Spark, PySpark, Databricks, Azure Data Factory, Snowflake, AWS (S3, Lambda), MS SQL Server, PostgreSQL, MySQL, Oracle</p>
+                        <li>DevOps & Tools</li>
+                        <p>Docker, Jenkins, GitLab, Gradle, Datadog</p>
                     </ul>
                 </div>
             </div>
@@ -69,7 +72,7 @@
                 <h3>Izmir Institute of Technology</h3>
                 <p>B.Sc. in Computer Engineering</p>
                 <ul>
-                    <li><b>Thesis:</b> Developing an eye-tracking system for ALS patients. Used C++ programming language using openFrameworks.</li>
+                    <li><b>Thesis:</b> Eye-tracking system for ALS patients using C++ and openFrameworks.</li>
                 </ul>
             </div>
             <div class="school">
@@ -92,12 +95,13 @@
                 <p>Columbia, MO, United States</p>
                 <p>Oracle Corporation is an American multinational computer technology company.</p>
                 <ul>
-                    <li>Worked in the Custom Applications team at the Tiger Institute for Health Innovation within MU Health Care.</li>
-                    <li>Built a single SPA application for the security team to check user activities.</li>
-                    <li>Worked with the research team to build a data warehouse in Snowflake.</li>
-                    <li>Built data pipelines with medallion architecture in Databricks for the analytics team.</li>
-                    <li>Refactored the ETL pipelines to enhance performance and reduce the occurrence of failures in the process.</li>
-                    <li>Leveraged Azure Data Factory, Azure Functions, Azure DevOps, Databricks, React Native, C#, Python, and SQL to build and deploy services.</li>
+                    <li>Developed a single-page application for the security team using React Native and Azure Functions (.NET/C#), integrating Microsoft Graph APIs to monitor user activity. Built and deployed the solution through a custom CI/CD pipeline and hosted it on Azure.</li>
+                    <li>Collaborated with data scientists and analysts to design and build a governed data warehouse on Databricks, using Delta Live Tables (DLT), Unity Catalog, and medallion architecture for reliable data lineage and access control.</li>
+                    <li>Led the migration of Databricks workflows across workspaces, optimized notebooks and Azure Data Factory pipelines using PySpark, and reduced compute costs by approximately $10,000/month through performance tuning.</li>
+                    <li>Established and maintained a version-controlled CI/CD repository for Databricks, standardizing deployment practices and improving team collaboration.</li>
+                    <li>Built ETL pipelines for the research team in a Snowflake environment, enabling efficient data modeling for healthcare research initiatives.</li>
+                    <li>Refactored and optimized legacy ETL processes using Azure Data Factory and Python, reducing pipeline execution time by 50% and increasing system reliability.</li>
+                    <li>Trained team members on using Azure Data Factory and Databricks, helping improve adoption, troubleshooting, and pipeline development practices across teams.</li>
                 </ul>
             </div>
 
@@ -106,11 +110,12 @@
                 <h3>Columbia Insurance Group</h3>
                 <h4>Full Stack Developer</h4>
                 <p>Columbia, MO, United States</p>
-                <p>Columbia Mutual Insurance Company is the parent company of a group of five property and casualty insurance companies operating as the Columbia Insurance Group.</p>
+                <p>Columbia Insurance Group is a regional property and casualty insurance company serving customers across the Midwest.</p>
                 <ul>
-                    <li>Made improvements and fixed bugs in the legacy Java applications.</li>
-                    <li>Built new features in the React application.</li>
-                    <li>Leveraged Java, React Native, jQuery, and AWS to build and deploy services.</li>
+                    <li>Fixed bugs and maintained legacy Java applications, contributing to improved system stability in insurance operations.</li>
+                    <li>Implemented enhancements and new features in a React-based frontend application to improve user workflows.</li>
+                    <li>Built serverless APIs using AWS Lambda and Node.js, integrating with existing systems to extend backend capabilities.</li>
+                    <li>Contributed to front-end components using jQuery and React Native for UI consistency across platforms.</li>
                 </ul>
             </div>
 
@@ -119,13 +124,14 @@
                 <h3>ZoomCare</h3>
                 <h4>Software Engineer</h4>
                 <p>Portland, OR, United States</p>
-                <p>ZoomCare is a Portland, Oregon-based chain of healthcare clinics.</p>
+                <p>ZoomCare is a Portland-based healthcare provider oering on-demand clinics and digital health services across the Pacific Northwest.</p>
                 <ul>
-                    <li>Worked in the Clinical Delivery team.</li>
-                    <li>Collaborated with cross-functional teams to transition a legacy system from a monolithic architec-ture to a microservices-based architecture using Java and Spring Boot.</li>
-                    <li>Performed unit testing using JUnit and Mockito, following test-driven development.</li>
-                    <li>Conducted code reviews, pair programming, and tech refinements.</li>
-                    <li>Utilized Java, React Native, Postgresql, Spring Boot, Maven, Jenkins, Datadog, Hibernate, and AWS to build and deploy services.</li>
+                    <li>Rebuilt core EMR system by migrating from JBoss to Tomcat and transitioning from a monolithic Java architecture to Spring Boot microservices using PostgreSQL and Hibernate.</li>
+                    <li>Developed a microservice to integrate a third-party healthcare system, leveraging AWS SQS and HL7 FHIR standards for secure real-time data exchange.</li>
+                    <li>Built a payment processing microservice by integrating third-party APIs and redesigning database schemas to support new workflows.</li>
+                    <li>Delivered front-end improvements across web and mobile platforms using React Native, enhancing the user experience for clinical staff and patients.</li>
+                    <li>Practiced test-driven development (TDD) with JUnit and Mockito; contributed through pair programming, code reviews, and tech refinement sessions.</li>
+                    <li>Monitored system performance and errors using Datadog and AWS CloudWatch to ensure service reliability and support debugging in production.</li>
                 </ul>
             </div>
 
@@ -134,13 +140,13 @@
                 <h3>Cerner Corporation</h3>
                 <h4>Software Engineer</h4>
                 <p>Columbia, MO, United States</p>
-                <p>Cerner Corporation is an American supplier of health information technology services, devices, and hardware.</p>
+                <p>Cerner is a global health information technology company focused on providing electronic health records, clinical data platforms, and analytics solutions to healthcare organizations.</p>
                 <ul>
-                    <li>Worked in the Information Management team at the Tiger Institute for Health Innovation within MU Health Care.</li>
-                    <li>Provided data and built ETL automation for researchers in the University of Missouri hospital.</li>
-                    <li>Built new features for a C# based web application.</li>
-                    <li>Worked with the research team to build a data warehouse in Snowflake using the PCORnet Common Data model for MU Health Care.</li>
-                    <li>Used Azure Data Factory, Azure Databricks, AWS, Snowflake, Oracle, and MS SQL.</li>
+                    <li>Collaborated with the research group at MU Health Care to build a Snowflake data warehouse using the PCORnet Common Data Model, integrating both EMR and billing data.</li>
+                    <li>Developed and maintained ETL processes to populate PCORnet tables, enabling standardized clinical research and population health analytics.</li>
+                    <li>Partnered with individual researchers to design and implement custom data pipelines using Databricks (PySpark) and Azure Data Factory for varied research needs.</li>
+                    <li>Built and supported features for a C#-based internal web application used by healthcare teams.</li>
+                    <li>Worked with a modern data stack including Azure Data Factory, Databricks, AWS, Snowflake, Oracle, and MS SQL Server.</li>
                 </ul>
             </div>
 
@@ -151,9 +157,9 @@
                 <p>Columbia, MO, United States</p>
                 <p>Dynamic Medical Management Solutions specializes in medical billing and operations, focusing on data analysis to optimize workflow.</p>
                 <ul>
-                    <li>Participated in a project to automate the reporting system.</li>
-                    <li>Built APIs and Unit testing in PHP programming language.</li>
-                    <li>Worked with Docker containers, Postgresql database, and bash scripting.</li>
+                    <li>Built Docker images to support the migration of internal data systems from Redis to PostgreSQL.</li>
+                    <li>Developed and tested backend APIs in PHP, including unit tests to ensure reliability and consistency in reporting data.</li>
+                    <li>Used Bash scripting to automate manual data handling tasks and streamline internal deployment workflows.</li>
                 </ul>
             </div>
 
@@ -162,13 +168,13 @@
                 <h3>Softtech</h3>
                 <h4>Software Engineer</h4>
                 <p>Istanbul, Turkey</p>
-                <p>Softtech is a software company in the banking and finance industry. It is Turkey’s largest software company with domestic capital.</p>
+                <p>Softtech is a software company in the banking and finance industry. It is Turkey's largest software company with domestic capital.</p>
                 <ul>
-                    <li>Worked in the International Banking department.</li>
-                    <li>Participated in an Open Banking project.</li>
-                    <li>Made improvements in the COBOL system.</li>
-                    <li>Built Restful web services using Java and Spring Boot.</li>
-                    <li>Utilized Java, COBOL, Vue.js, MySQL, MS SQL, Spring Boot, Gradle, Jenkins, Hibernate, and Gitlab to build and deploy services.</li>
+                    <li>Participated in an Open Banking integration project, ensuring regulatory compliance and secure data exchange for international banking systems.</li>
+                    <li>Designed and developed a Spring Boot microservice for a document management solution using Hibernate, exposing secure RESTful APIs and writing unit tests for coverage and reliability.</li>
+                    <li>Maintained and enhanced COBOL-based legacy systems used in core banking workflows, bridging modern and traditional technologies.</li>
+                    <li>Built UI components in Vue.js and integrated frontend logic with MySQL and MS SQL-based backends.</li>
+                    <li>Leveraged Gradle, Jenkins, and GitLab for CI/CD automation, version control, and deployment consistency across teams.</li>
                 </ul>
             </div>
 
@@ -177,11 +183,11 @@
                 <h3>Vestel</h3>
                 <h4>Intern</h4>
                 <p>Manisa, Turkey</p>
-                <p>Vestel is a Turkish home and professional appliances manufacturing company of 18 companies specializing in electronics, major appliances, and information technology.</p>
+                <p>Vestel is a global manufacturer of consumer electronics, home appliances, and smart technologies, headquartered in Turkey and operating one of Europes largest industrial production facilities.</p>
                 <ul>
-                    <li>Worked in Smart Systems Test Development department.</li>
-                    <li>Created a web application displaying real-time phone production line test results.</li>
-                    <li>Used C# programming, Entity Framework, ASP .NET MVC, and MS SQL database.</li>
+                    <li>Designed and implemented a web application to visualize real-time test results from the smartphone production line, supporting operational quality control.</li>
+                    <li>Developed the solution using C#, ASP.NET MVC, and Entity Framework; integrated with an MS SQL database for data persistence and live reporting.</li>
+                    <li>Collaborated with engineers in the Smart Systems Test Development department to align application functionality with production workflows.</li>
                 </ul>
             </div>
 
@@ -192,8 +198,9 @@
                 <p>Izmir, Turkey</p>
                 <p>ESB Software and Information Technologies, a software company that offers web and mobile-based software solutions</p>
                 <ul>
-                    <li>Participated in a project called Kosi Web. This application allows people to create their website without writing any code.</li>
-                    <li>Used PHP, HTML, CSS, and JavaScript programming languages and MySQL database.</li>
+                    <li>Contributed to the development of "Kosi Web", a no-code platform that allows users to create and publish websites without programming experience.</li>
+                    <li>Implemented backend and frontend components using PHP, HTML, CSS, JavaScript, and MySQL.</li>
+                    <li>Gained hands-on experience in full-stack web development while collaborating with a small agile team.</li>
                 </ul>
             </div>
 
