github account rename

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="assets/img/profile.png" alt="Logo">
             <ul class="web-links">
                 <li><a class="fa fa-linkedin-square" href="https://www.linkedin.com/in/eren-ufuktepe-a20081145/" target="_blank"></a></li>
-                <li><a class="fa fa-github-square" href="https://github.com/ErenUfuktepe" target="_blank"></a></li>
+                <li><a class="fa fa-github-square" href="https://github.com/erenufuktepe" target="_blank"></a></li>
             </ul>
             <div class="contact">
                 <ul>
